tests/bad/expr-statements/nested_block_yield.ae
/// fail: Cannot yield in this context

def main() {
    let x = if 5 < 10 {
        {
            yield "bye"
        }
    } else {
        yield "hi"
    }
}